simple-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple
  labels:
    app: simple
spec:
  selector:
    matchLabels:
      app: simple
  replicas: 5
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: simple
    spec:
      containers:
       —name: simple
          image: registry.hub.docker.com/library/simple
          ports:
           —containerPort: 3000
