simple-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple
  labels:
    app: simple
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: simple.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple
                port:
                  number: 80
